--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Introdução</a></li>
+							<li><a href="#first">Acessórios</a></li>
+							<li><a href="#second">Maquiagem</a></li>
+							<li><a href="#cta">Diversos</a></li>
 						</ul>
 					</nav>
 
